--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -10,6 +10,11 @@
   border-radius: 8px;
 }
 
+.card_badge_hiddin {
+  display: none !important;
+  ;
+}
+
 .card_badge {
   position: absolute;
   top: 0px;
